La descripción se toma del archivo datos.json y se presenta en una tarjeta.

--- a/src/views/s0/index.ejs
+++ b/src/views/s0/index.ejs
@@ -21,8 +21,8 @@
                     
                     <!-- DESCRIPCIÓN -->
                     <div class="col-md-4 align-self-stretch">
-                        <h5 id="titulo">Titulo</h5>
-                        <p id="descripcion">Descripción</p>
+                        <h5 id="titulo">404 not Found</h5>
+                        <p id="descripcion">404 not Found</p>
                     </div>
 
                 </div>
@@ -36,7 +36,7 @@
             <%- include('../partials/scripts.ejs'); %>
 
                 <!-- Sketch 0 -->
-                <script src="sk0/sketch.js"></script>
+                <script src="s0/sketch.js"></script>
 
     </body>
 
