--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,5 +13,7 @@
 
     <!-- CSS custom -->
     <link rel="stylesheet" href="main.css">
+
+    <link rel="icon" href="dice-6.svg" type="image/gif" sizes="16x16"> 
     
 </head>
