--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-dark container-lg">
     <div class="container-fluid">
 
-        <a id="title" class="navbar-brand" href="/s1">Ejemplos P5js</a>
+        <a id="title" class="navbar-brand" href="/">Ejemplos P5js</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar">
@@ -23,16 +23,16 @@
                 <!-- LISTA DE ITEMS -->
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/s1">Uno</a>
+                        <a class="nav-link active" aria-current="page" href="/sk1">Uno</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/s2">Dos</a>
+                        <a class="nav-link" href="/sk2">Dos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/s3">Tres</a>
+                        <a class="nav-link" href="/sk3">Tres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/s4">Cuatro</a>
+                        <a class="nav-link" href="/sk4">Cuatro</a>
                     </li>
                 </ul>
             </div>
