--- a/src/views/sk0/index.ejs
+++ b/src/views/sk0/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('../partials/header'); %>
+<%- include('../partials/header.ejs'); %>
 
     <body>
 
@@ -12,28 +12,17 @@
 
                 <!-- CONTENIDO -->
                 <div class="row align-items-start">
-
+                    
                     <!-- CANVAS P5js -->
                     <div class="col-md-8 align-self-start">
                         <main>
                         </main>
                     </div>
-
+                    
                     <!-- DESCRIPCIÓN -->
                     <div class="col-md-4 align-self-stretch">
-
-                        <% item=datos.filter( d=> d.id==='s1'); %>
-
-                            <div class="card">
-                                <div class="card-header">
-                                    <%= item[0].title %>
-                                </div>
-                                <div class="card-body">
-                                    <p>
-                                        <%= item[0].desc %>
-                                    </p>
-                                </div>
-                            </div>
+                        <h5 id="titulo">404 not Found</h5>
+                        <p id="descripcion">404 not Found</p>
                     </div>
 
                 </div>
@@ -47,7 +36,7 @@
             <%- include('../partials/scripts.ejs'); %>
 
                 <!-- Sketch 0 -->
-                <script src="s1/sketch.js"></script>
+                <script src="sk0/sketch.js"></script>
 
     </body>
 
