se agregó el directorio sketches

--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -23,16 +23,16 @@
                 <!-- LISTA DE ITEMS -->
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/sk1">Uno</a>
+                        <a class="nav-link active" aria-current="page" href="/sketches/sk1">Uno</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sk2">Dos</a>
+                        <a class="nav-link" href="/sketches/sk2">Dos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sk3">Tres</a>
+                        <a class="nav-link" href="/sketches/sk3">Tres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sk4">Cuatro</a>
+                        <a class="nav-link" href="/sketches/sk4">Cuatro</a>
                     </li>
                 </ul>
             </div>
