--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css"> -->
 
     <!-- CSS custom -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
 
     <link rel="icon" href="dice-6.svg" type="image/gif" sizes="16x16"> 
     
