--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -5,6 +5,6 @@
 <!-- <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.js"></script> -->
 
  <!-- P5js -->
- <script src="p5.js"></script>
+ <script src="../p5.js"></script>
 
- <script src="main.js"></script>
+ <script src="../main.js"></script>
