--- a/src/views/sketches/sk0/index.ejs
+++ b/src/views/sketches/sk0/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('../partials/header.ejs'); %>
+<%- include('../../partials/header.ejs'); %>
 
     <body>
 
         <!-- NAVBAR -->
-        <%- include('../partials/navigation.ejs'); %>
+        <%- include('../../partials/navigation.ejs'); %>
 
             <div class="container-md border">
 
@@ -28,15 +28,15 @@
                 </div>
 
                 <!-- FOOTER -->
-                <%- include('../partials/footer.ejs'); %>
+                <%- include('../../partials/footer.ejs'); %>
 
             </div>
 
             <!-- SCRIPTS -->
-            <%- include('../partials/scripts.ejs'); %>
+            <%- include('../../partials/scripts.ejs'); %>
 
                 <!-- Sketch 0 -->
-                <script src="sk0/sketch.js"></script>
+                <script src="../sketches/sk0/sketch.js"></script>
 
     </body>
 
