--- a/src/views/sketches/sk1/index.ejs
+++ b/src/views/sketches/sk1/index.ejs
@@ -22,7 +22,7 @@
                     <!-- DESCRIPCIÓN -->
                     <div class="col-md-4 align-self-stretch">
 
-                        <% item=datos.filter( d=> d.id==='s1'); %>
+                        <% item=datos.filter( d=> d.id==='sk1'); %>
 
                             <div class="card">
                                 <div class="card-header">
