--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -18,10 +18,12 @@
                     aria-label="Close"></button>
             </div>
 
+            <% console.log(skid); %>
 
             <div class="offcanvas-body">
                 <!-- LISTA DE ITEMS -->
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/sketches/sk1">Uno</a>
                     </li>
