--- a/src/views/sketches/sk1/index.ejs
+++ b/src/views/sketches/sk1/index.ejs
@@ -47,7 +47,7 @@
             <%- include('../../partials/scripts.ejs'); %>
 
                 <!-- Sketch 0 -->
-                <script src="../sketches/sk1/sketch.js"></script>
+                <script src="<%= '../sketches/'+ item[0].id +'/sketch.js' %>"></script>
 
     </body>
 
