Avance en responsive

--- a/src/views/sketches/sk1/index.ejs
+++ b/src/views/sketches/sk1/index.ejs
@@ -14,13 +14,13 @@
                 <div class="row align-items-start">
 
                     <!-- CANVAS P5js -->
-                    <div class="col-md-8 align-self-start">
+                    <div class="col-12 col-lg-7 col-xl-6 col-xxl-5 align-self-start">
                         <main>
                         </main>
                     </div>
 
                     <!-- DESCRIPCIÓN -->
-                    <div class="col-md-4 align-self-stretch">
+                    <div class="col-12 col-lg-5 col-xl-6 col-xxl-7 align-self-stretch">
 
                         <% item=datos.filter( d=> d.id===skid); %>
 
@@ -43,11 +43,11 @@
 
             </div>
 
-            <!-- SCRIPTS -->
-            <%- include('../../partials/scripts.ejs'); %>
+        <!-- SCRIPTS -->
+        <%- include('../../partials/scripts.ejs'); %>
 
-                <!-- Sketch 0 -->
-                <script src="<%= '../sketches/'+ item[0].id +'/sketch.js' %>"></script>
+        <!-- SKETCH -->
+        <script src="<%= '../sketches/'+ item[0].id +'/sketch.js' %>"></script>
 
     </body>
 
