--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,6 +1,6 @@
 <!-- NAVBAR -->
-<nav class="navbar navbar-dark container-lg">
-    <div class="container-fluid">
+<nav class="navbar navbar-dark container-md">
+    <div class="container-md">
 
         <a id="title" class="navbar-brand" href="/">Ejemplos P5js</a>
 
@@ -11,7 +11,6 @@
 
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
 
-
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Ejemplos P5js</h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
@@ -19,6 +18,7 @@
             </div>
 
             <div class="offcanvas-body">
+                
                 <!-- LISTA DE ITEMS -->
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
@@ -27,6 +27,7 @@
                             <a class="nav-link active" aria-current="page" href="<%= '/sketches/'+d.id %>"> <%= d.title %>  </a>
                         </li>
                     <% } ) %>
+
                 </ul>
             </div>
 
