--- a/src/public/main.css
+++ b/src/public/main.css
@@ -7,6 +7,10 @@ main {
     border-color: black;
     width: 526px;
     height: 326px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 [class*="col"] {
