Se mejoró la distribución

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,8 @@
 <!-- FOOTER -->
-<div class="row">
-    <div class="col">
-        @matahj
+<div class="container-md border">
+    <div class="row">
+        <div class="col p-1">
+            @matahj
+        </div>
     </div>
 </div>
