--- a/src/views/sketches/sk1/index.ejs
+++ b/src/views/sketches/sk1/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- head -->
 <%- include('../../partials/header'); %>
 
     <body>
@@ -8,23 +9,22 @@
         <!-- NAVBAR -->
         <%- include('../../partials/navigation.ejs'); %>
 
+            <!-- CONTENIDO -->
             <div class="container-md border">
-
-                <!-- CONTENIDO -->
                 <div class="row align-items-start">
 
                     <!-- CANVAS P5js -->
-                    <div class="col-12 col-lg-7 col-xl-6 col-xxl-5 align-self-start py-3">
+                    <div class="col-12 col-lg-7 col-xl-6 col-xxl-5 align-self-start p-3">
                         <main>
                         </main>
                     </div>
 
                     <!-- DESCRIPCIÓN -->
-                    <div class="col-12 col-lg-5 col-xl-6 col-xxl-7 align-self-stretch  py-3">
+                    <div class="col-12 col-lg-5 col-xl-6 col-xxl-7 align-self-stretch  p-1">
 
                         <% item=datos.filter( d=> d.id===skid); %>
 
-                            <div class="card">
+                            <div class="card h-100">
                                 <div class="card-header">
                                     <h5 class="card-title">
                                         <%= item[0].title %>
@@ -36,21 +36,22 @@
                                     </p>
                                 </div>
                             </div>
+
                     </div>
 
                 </div>
-
-                <!-- FOOTER -->
-                <%- include('../../partials/footer.ejs'); %>
-
             </div>
 
-        <!-- SCRIPTS -->
-        <%- include('../../partials/scripts.ejs'); %>
+            <!-- FOOTER -->
+            <%- include('../../partials/footer.ejs'); %>
 
-        <!-- SKETCH -->
-        <script src="<%= '../sketches/'+ item[0].id +'/sketch.js' %>"></script>
+                <!-- SCRIPTS -->
+                <%- include('../../partials/scripts.ejs'); %>
+
+                    <!-- SKETCH -->
+                    <script src="<%= '../sketches/'+ item[0].id +'/sketch.js' %>"></script>
 
     </body>
+
 
 </html>
