--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,8 @@
 
     <!-- CSS custom -->
     <link rel="stylesheet" href="../main.css">
-
+    
+    <!-- favicon -->
     <link rel="icon" href="../dice-6.svg" type="image/gif" sizes="16x16"> 
     
 </head>
