--- a/src/public/main.css
+++ b/src/public/main.css
@@ -28,6 +28,10 @@ main {
     background-color: #57A519;
 }
 
+.offcnavas-width{
+    width: 220px;
+}
+
 p.info {
     color: rgba(20, 22, 21, 0.561);
 }
