--- a/src/views/sketches/sk1/index.ejs
+++ b/src/views/sketches/sk1/index.ejs
@@ -14,9 +14,10 @@
                 <div class="row align-items-start">
 
                     <!-- CANVAS P5js -->
-                    <div class="col-12 col-lg-7 col-xl-6 col-xxl-5 align-self-start p-3">
+                    <div id="principal" class="col-12 col-lg-7 col-xl-6 col-xxl-5 align-self-start p-3">
                         <main>
                         </main>
+                        <div id="interaccion"></div>
                     </div>
 
                     <!-- DESCRIPCIÓN -->
