--- a/src/views/sketches/sk1/index.ejs
+++ b/src/views/sketches/sk1/index.ejs
@@ -15,8 +15,7 @@
 
                     <!-- CANVAS P5js -->
                     <div id="principal" class="col-12 col-lg-7 col-xl-6 col-xxl-5 align-self-start p-3">
-                        <main>
-                        </main>
+                        <main></main>
                         <div id="interaccion"></div>
                     </div>
 
