--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,15 @@
-<!-- FOOTER -->
 <div class="container-md border">
-    <div class="row">
-        <div class="col p-1">
+    <div class="row footer">
+        <div class="col footer">
             @matahj
+            <a class="btn btn-success btnfooter" target="_blank" href="https://github.com/matahj/ejemplosP5js"
+                role="button">
+                <i class="bi bi-github"></i>
+            </a>
+            <a class="btn btn-success btnfooter" target="_blank" href="https://twitter.com/matahj"
+                role="button">
+                <i class="bi bi-twitter"></i>
+            </a>
         </div>
     </div>
 </div>
